--- a/Engine/2DRendUI.vcxproj
+++ b/Engine/2DRendUI.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="PrimitivesManager.h" />
     <ClInclude Include="Renderer.h" />
+    <ClInclude Include="Toolbar.h" />
     <ClInclude Include="ViewState.h" />
   </ItemGroup>
   <ItemGroup>
@@ -171,6 +172,7 @@
     <ClCompile Include="Primitive.hpp" />
     <ClCompile Include="PrimitivesManager.cpp" />
     <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="Toolbar.cpp" />
     <ClCompile Include="ViewState.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
